@startuml

title __PROXY's Class Diagram__\n

  namespace in.ashwanik.pdp.proxy {
    class in.ashwanik.pdp.proxy.DatabaseConnection {
        + get()
        + getList()
    }
  }
  

  namespace in.ashwanik.pdp.proxy {
    class in.ashwanik.pdp.proxy.DbConnectionPool {
        {static} + newConnection()
    }
  }
  

  namespace in.ashwanik.pdp.proxy {
    class in.ashwanik.pdp.proxy.User {
        - email : String
        - id : long
        - name : String
        + getEmail()
        + getId()
        + getName()
        + setEmail()
        + setId()
        + setName()
    }
  }
  

  namespace in.ashwanik.pdp.proxy {
    interface in.ashwanik.pdp.proxy.UserRepository {
        {abstract} + getUser()
        {abstract} + getUsers()
    }
  }
  

  namespace in.ashwanik.pdp.proxy {
    class in.ashwanik.pdp.proxy.UserRepositoryImpl {
        + UserRepositoryImpl()
        + getUser()
        + getUsers()
    }
  }
  

  namespace in.ashwanik.pdp.proxy {
    class in.ashwanik.pdp.proxy.UserRepositoryImplProxy {
        + getUser()
        + getUsers()
    }
  }
  

  in.ashwanik.pdp.proxy.UserRepositoryImpl .up.|> in.ashwanik.pdp.proxy.UserRepository
  in.ashwanik.pdp.proxy.UserRepositoryImpl o-- in.ashwanik.pdp.proxy.DatabaseConnection : connection
  in.ashwanik.pdp.proxy.UserRepositoryImplProxy .up.|> in.ashwanik.pdp.proxy.UserRepository
  in.ashwanik.pdp.proxy.UserRepositoryImplProxy o-- in.ashwanik.pdp.proxy.UserRepositoryImpl : userRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
